--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "spatie/laravel-ray",
+    "name": "elsayed85/laravel-ray",
     "description": "Easily debug Laravel apps",
     "keywords": [
         "spatie",
@@ -23,7 +23,7 @@
         "illuminate/queue": "^7.20|^8.19|^9.0|^10.0",
         "illuminate/support": "^7.20|^8.19|^9.0|^10.0",
         "spatie/backtrace": "^1.0",
-        "spatie/ray": "^1.37",
+        "elsayed85/ray": "dev-main",
         "symfony/stopwatch": "4.2|^5.1|^6.0",
         "zbateson/mail-mime-parser": "^1.3.1|^2.0"
     },
